Fixed manifest.json icons.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,7 +8,7 @@
 
 <body>
   <main class="main-content">
-    <img class="logo" src="icon-128.png" alt="SaveIt logo">
+    <img class="logo" src="images/icon-128.png" alt="SaveIt logo">
     <h2>SaveIt - Save your URL/File</h2>
     <label for="url-input">URL</label>
     <input type="text" placeholder="https://example.com" id="url-input">
