Completely changed the design and made a really simple landing page. (for flavortown example link)

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -10,9 +10,9 @@
   <main class="main-content">
     <img class="logo" src="../images/icon-128.png" alt="SaveIt logo">
     <h2>SaveIt - Save your URL/File</h2>
-    <label for="url-input">URL</label>
+    <label for="url-input" class="url-label">URL</label>
     <input type="text" placeholder="https://example.com" id="url-input">
-    <label for="filename-input">Filename</label>
+    <label for="filename-input" class="filename-label">Filename</label>
     <input type="text" placeholder="downloaded-file.pdf" id="filename-input">
     <button id="download-btn">Download</button>
   </main>
